app-deployment-K8S/monitoring/nginx-prometheus-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-prometheus-exporter
  namespace: monitoring  # Ensure it matches your namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-prometheus-exporter
  template:
    metadata:
      labels:
        app: nginx-prometheus-exporter
    spec:
      containers:
        - name: nginx-prometheus-exporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - "-nginx.scrape-uri=http://gal-alon-nginx-service.app-ga.svc.cluster.local/stub_status"
          ports:
            - containerPort: 9113
              name: metrics
