app-deployment-K8S/monitoring/nginx-prometheus-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-prometheus-exporter
  namespace: monitoring  # Ensure it matches the deployment namespace
spec:
  selector:
    app: nginx-prometheus-exporter
  ports:
    - port: 9113
      targetPort: 9113
      protocol: TCP
      name: metrics
