app-deployment-K8S/monitoring/prometheus-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-loadbalancer
  namespace: app-ga
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
